# mneme-codex-adapter

./: CODEX_AGENT_INSTALL.md  README.md  pyproject.toml
.agents/skills/mneme-memory/: SKILL.md
.github/workflows/: ci.yml
adapters/codex/: AGENTS_MNEME_SNIPPET.md  CODEX_DESKTOP_QUICKSTART.md  MNEME_CODEX_HOOKS_USAGE.md  MNEME_CODEX_INGEST_USAGE.md  MNEME_CODEX_MCP_USAGE.md
mneme_codex_adapter/: __init__.py  cli.py  hooks.py  setup.py  utils.py
scripts/: check_core_contract_drift.py  check_no_core_internal_imports.py
tests/: test_codex_hooks.py  test_codex_ingest.py  test_contract_checks.py  test_setup.py
