[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme-codex-adapter"
version = "0.1.5"
description = "Codex hook and transcript adapter for Mneme"
authors = [{ name = "Ivan Konstantinov" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["agents", "memory", "context", "codex", "mneme"]
dependencies = [
  "httpx>=0.27",
  "mneme-context-service @ git+https://github.com/johnnykor82/mneme-universal-context-service.git",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
mneme-codex = "mneme_codex_adapter.cli:main"

[tool.setuptools.packages.find]
include = ["mneme_codex_adapter*"]

[tool.setuptools.package-data]
mneme_codex_adapter = ["skills/mneme-memory/SKILL.md"]

[tool.mneme]
supported_core_contract = ">=0.7,<0.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
